--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -77,6 +77,28 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Company.Tags)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Enrollments)
+        </dt>
+        <dd class="col-sm-10">
+            <table class="table">
+                <tr>
+                    <th>Course Title</th>
+                    <th>Grade</th>
+                </tr>
+                @foreach (var item in Model.Company.Enrollments)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Ads.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Grade)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
     </dl>
 </div>
 <div>
