--- a/Pages/Company/Delete.cshtml
+++ b/Pages/Company/Delete.cshtml
@@ -5,11 +5,14 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+<h1>@Localizer["Delete"]</h1>
 
 <p class="text-danger">@Model.ErrorMessage</p>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@Localizer["Are you sure you want to delete this?"]</h3>
 <div>
     <h4>Company</h4>
     <hr />
@@ -81,10 +84,10 @@
             @Html.DisplayFor(model => model.Company.Tags)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Company.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
+        <a asp-page="./Index">@Localizer["Back to List"]</a>
+</form>
 </div>
