--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,8 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,14 +22,17 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">@Localizer["Home"]</a>
+</li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">@Localizer["Privacy"]</a>
+</li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">Company</a>
-                        </li>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
+</li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/About">@Localizer["About"]</a>
+</li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -41,8 +47,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">@Localizer["Privacy"]</a>
+</div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
