--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <title>@ViewData["Title"] - MyWebSite</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" type="text/css" href="/css/dark.css">
+    <link rel="stylesheet" type="text/css" href="/css/light.css" id="theme-link">
 </head>
 <body>
     <header>
@@ -23,16 +25,19 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">@Localizer["Home"]</a>
-</li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">@Localizer["Privacy"]</a>
-</li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
-</li>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/About">@Localizer["About"]</a>
-</li>
+                        </li>
+                        <li>
+                            <div class="theme-button" id="theme-button">@Localizer["Change theme"]</div>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -48,12 +53,13 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">@Localizer["Privacy"]</a>
-</div>
+        </div>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="/js/ChangeTheme.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
