--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -12,99 +12,133 @@
 
 <div>
     <h4>@Localizer["Company"]</h4>
-        <hr />
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Title)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Title)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Rating)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Rating)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.EnrollmentDate)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.EnrollmentDate)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Bonus)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Bonus)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Description)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Description)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Images)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Images)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Video)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Video)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Topic)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Topic)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.News)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.News)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Price)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Price)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Tags)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Company.Tags)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Company.Enrollments)
-            </dt>
-            <dd class="col-sm-10">
-                <table class="table">
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Title)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Title)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Rating)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Rating)
+        </dd>
+        @*<dd class="rating-area">
+            <input type="radio" id="star-5" name="rating" value="5">
+            <label for="star-5" title="Оценка «5»"></label>
+            <input type="radio" id="star-4" name="rating" value="4">
+            <label for="star-4" title="Оценка «4»"></label>
+            <input type="radio" id="star-3" name="rating" value="3">
+            <label for="star-3" title="Оценка «3»"></label>
+            <input type="radio" id="star-2" name="rating" value="2">
+            <label for="star-2" title="Оценка «2»"></label>
+            <input type="radio" id="star-1" name="rating" value="1">
+            <label for="star-1" title="Оценка «1»"></label>
+        </dd>*@
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.EnrollmentDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.EnrollmentDate)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Bonus)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Bonus)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Images)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Images)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Video)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Video)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Topic)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Topic)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.News)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.News)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Price)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Price)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Tags)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.Tags)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.Enrollments)
+        </dt>
+        <dd class="col-sm-10">
+            <table class="table">
+                <tr>
+                    <th>@Localizer["Course Title"]</th>
+                    <th>@Localizer["Grade"]</th>
+                </tr>
+                @foreach (var item in Model.Company.Enrollments)
+                {
                     <tr>
-                        <th>@Localizer["Course Title"]</th>
-                        <th>@Localizer["Grade"]</th>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Ads.Title)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Grade)
+                        </td>
                     </tr>
-                    @foreach (var item in Model.Company.Enrollments)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Ads.Title)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Grade)
-                            </td>
-                        </tr>
-                    }
-                </table>
-            </dd>
-        </dl>
+                }
+            </table>
+        </dd>
+    </dl>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Company.ID">@Localizer["Edit"]</a> |
     <a asp-page="./Index">@Localizer["Back to List"]</a>
 </div>
+@*<form action="" method="post">
+    <span>Имя: </span><br>
+    <input type="text" id="name"><br>
+    <span>Комментарий</span><br>
+    <textarea id="comment" cols="30" rows="10"></textarea><br>
+    <button id="button">Отправить</button>
+</form>*@
+@*<script>
+  var button = document.getElementById('button'),
+      xmlhttp = new XMLHttpRequest();
+  button.addEventListener('click', function() {
+   var name = document.getElementById('name').value.replace(/<[^>]+>/g,''),
+       comment = document.getElementById('comment').value.replace(/<[^>]+>/g,'');
+   if(name === '' || comment === '') {
+    alert('Заполните все поля!');
+    return false;
+   }
+   xmlhttp.open('post', 'libs/add_comment.php', true);
+   xmlhttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+   xmlhttp.send("name=" + encodeURIComponent(name) + "&comment=" + encodeURIComponent(comment));
+  });
+</script>*@
