--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -35,6 +35,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/About">@Localizer["About"]</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
+</li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Ads/Index">@Localizer["Ads"]</a>
+</li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Instructors/Index">@Localizer["Instructors"]</a>
+</li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">@Localizer["Departments"]</a>
+</li>
                         <li>
                             <div class="theme-button" id="theme-button">@Localizer["Change theme"]</div>
                         </li>
