--- a/Pages/Ads/Create.cshtml
+++ b/Pages/Ads/Create.cshtml
@@ -29,8 +29,12 @@
                 <span asp-validation-for="Ads.Tags" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Ads.DepartmentID" class="control-label"></label>
-                <select asp-for="Ads.DepartmentID" class ="form-control" asp-items="ViewBag.DepartmentID"></select>
+                <label asp-for="Ads.Department" class="control-label"></label>
+                <select asp-for="Ads.DepartmentID" class="form-control"
+                        asp-items="@Model.DepartmentNameSL">
+                    <option value="">-- Select Department --</option>
+                </select>
+                <span asp-validation-for="Ads.DepartmentID" class="text-danger" />
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
