--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Ads/Index">@Localizer["Ads"]</a>
 </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Instructors/Index">@Localizer["Instructors"]</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">@Localizer["Instructors"]</a>
 </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">@Localizer["Departments"]</a>
