--- a/Pages/User/Details.cshtml
+++ b/Pages/User/Details.cshtml
@@ -12,62 +12,62 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.LastName)
+            @Html.DisplayNameFor(model => model.Instructors.LastName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.LastName)
+            @Html.DisplayFor(model => model.Instructors.LastName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.FirstMidName)
+            @Html.DisplayNameFor(model => model.Instructors.FirstMidName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.FirstMidName)
+            @Html.DisplayFor(model => model.Instructors.FirstMidName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.HireDate)
+            @Html.DisplayNameFor(model => model.Instructors.HireDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.HireDate)
+            @Html.DisplayFor(model => model.Instructors.HireDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Age)
+            @Html.DisplayNameFor(model => model.Instructors.Age)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.Age)
+            @Html.DisplayFor(model => model.Instructors.Age)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Country)
+            @Html.DisplayNameFor(model => model.Instructors.Country)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.Country)
+            @Html.DisplayFor(model => model.Instructors.Country)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.City)
+            @Html.DisplayNameFor(model => model.Instructors.City)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.City)
+            @Html.DisplayFor(model => model.Instructors.City)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Email)
+            @Html.DisplayNameFor(model => model.Instructors.Email)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.Email)
+            @Html.DisplayFor(model => model.Instructors.Email)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.AboutMe)
+            @Html.DisplayNameFor(model => model.Instructors.AboutMe)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.AboutMe)
+            @Html.DisplayFor(model => model.Instructors.AboutMe)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.User.Comments)
+            @Html.DisplayNameFor(model => model.Instructors.Comments)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.User.Comments)
+            @Html.DisplayFor(model => model.Instructors.Comments)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.User.ID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Instructors.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
