--- a/Pages/User/Edit.cshtml
+++ b/Pages/User/Edit.cshtml
@@ -13,56 +13,56 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="User.ID" />
+            <input type="hidden" asp-for="Instructors.ID" />
             <div class="form-group">
-                <label asp-for="User.LastName" class="control-label"></label>
-                <input asp-for="User.LastName" class="form-control" />
-                <span asp-validation-for="User.LastName" class="text-danger"></span>
+                <label asp-for="Instructors.LastName" class="control-label"></label>
+                <input asp-for="Instructors.LastName" class="form-control" />
+                <span asp-validation-for="Instructors.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.FirstMidName" class="control-label"></label>
-                <input asp-for="User.FirstMidName" class="form-control" />
-                <span asp-validation-for="User.FirstMidName" class="text-danger"></span>
+                <label asp-for="Instructors.FirstMidName" class="control-label"></label>
+                <input asp-for="Instructors.FirstMidName" class="form-control" />
+                <span asp-validation-for="Instructors.FirstMidName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.HireDate" class="control-label"></label>
-                <input asp-for="User.HireDate" class="form-control" />
-                <span asp-validation-for="User.HireDate" class="text-danger"></span>
+                <label asp-for="Instructors.HireDate" class="control-label"></label>
+                <input asp-for="Instructors.HireDate" class="form-control" />
+                <span asp-validation-for="Instructors.HireDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Age" class="control-label"></label>
-                <input asp-for="User.Age" class="form-control" />
-                <span asp-validation-for="User.Age" class="text-danger"></span>
+                <label asp-for="Instructors.Age" class="control-label"></label>
+                <input asp-for="Instructors.Age" class="form-control" />
+                <span asp-validation-for="Instructors.Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Country" class="control-label"></label>
-                <input asp-for="User.Country" class="form-control" />
-                <span asp-validation-for="User.Country" class="text-danger"></span>
+                <label asp-for="Instructors.Country" class="control-label"></label>
+                <input asp-for="Instructors.Country" class="form-control" />
+                <span asp-validation-for="Instructors.Country" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.City" class="control-label"></label>
-                <input asp-for="User.City" class="form-control" />
-                <span asp-validation-for="User.City" class="text-danger"></span>
+                <label asp-for="Instructors.City" class="control-label"></label>
+                <input asp-for="Instructors.City" class="form-control" />
+                <span asp-validation-for="Instructors.City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Email" class="control-label"></label>
-                <input asp-for="User.Email" class="form-control" />
-                <span asp-validation-for="User.Email" class="text-danger"></span>
+                <label asp-for="Instructors.Email" class="control-label"></label>
+                <input asp-for="Instructors.Email" class="form-control" />
+                <span asp-validation-for="Instructors.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.AboutMe" class="control-label"></label>
-                <input asp-for="User.AboutMe" class="form-control" />
-                <span asp-validation-for="User.AboutMe" class="text-danger"></span>
+                <label asp-for="Instructors.AboutMe" class="control-label"></label>
+                <input asp-for="Instructors.AboutMe" class="form-control" />
+                <span asp-validation-for="Instructors.AboutMe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.Comments" class="control-label"></label>
-                <input asp-for="User.Comments" class="form-control" />
-                <span asp-validation-for="User.Comments" class="text-danger"></span>
+                <label asp-for="Instructors.Comments" class="control-label"></label>
+                <input asp-for="Instructors.Comments" class="form-control" />
+                <span asp-validation-for="Instructors.Comments" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="User.OfficeAssignment.Location" class="control-label"></label>
-                <input asp-for="User.OfficeAssignment.Location" class="form-control" />
-                <span asp-validation-for="User.OfficeAssignment.Location" class="text-danger" />
+                <label asp-for="Instructors.OfficeAssignment.Location" class="control-label"></label>
+                <input asp-for="Instructors.OfficeAssignment.Location" class="form-control" />
+                <span asp-validation-for="Instructors.OfficeAssignment.Location" class="text-danger" />
             </div>
             <div class="form-group">
                 <div class="table">
