--- a/Pages/Ads/Edit.cshtml
+++ b/Pages/Ads/Edit.cshtml
@@ -1,13 +1,16 @@
 ﻿@page
 @model MyWebSite.Pages.Ads.EditModel
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>@Localizer["Edit"]</h1>
 
-<h4>Ads</h4>
+<h4>@Localizer["Ads"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -42,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">@Localizer["Back to List"]</a>
 </div>
 
 @section Scripts {
