--- a/Pages/Departments/Delete.cshtml
+++ b/Pages/Departments/Delete.cshtml
@@ -1,17 +1,20 @@
 ﻿@page "{id:int}"
 @model MyWebSite.Pages.Departments.DeleteModel
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>@Localizer["Delete"]</h1>
 
 <p class="text-danger">@Model.ConcurrencyErrorMessage</p>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@Localizer["Are you sure you want to delete this?"]</h3>
 <div>
-    <h4>Department</h4>
+    <h4>@Localizer["Department"]</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -51,7 +54,7 @@
         <input type="hidden" asp-for="Department.RowVersion" />
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-danger" /> |
-            <a asp-page="./Index">Back to List</a>
+            <a asp-page="./Index">@Localizer["Back to List"]</a>
         </div>
     </form>
 </div>
