--- a/Pages/Departments/Details.cshtml
+++ b/Pages/Departments/Details.cshtml
@@ -1,14 +1,17 @@
 ﻿@page
 @model MyWebSite.Pages.Departments.DetailsModel
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@Localizer["Details"]</h1>
 
 <div>
-    <h4>Department</h4>
+    <h4>@Localizer["Department"]</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -44,6 +47,6 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Department.DepartmentID">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Edit" asp-route-id="@Model.Department.DepartmentID">@Localizer["Edit"]</a> |
+    <a asp-page="./Index">@Localizer["Back to List"]</a>
 </div>
