--- a/Pages/Departments/Edit.cshtml
+++ b/Pages/Departments/Edit.cshtml
@@ -1,13 +1,16 @@
 ﻿@page "{id:int}"
 @model MyWebSite.Pages.Departments.EditModel
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>@Localizer["Edit"]</h1>
 
-<h4>Department</h4>
+<h4>@Localizer["Department"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -49,7 +52,7 @@
     </div>
 </div>
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="./Index">@Localizer["Back to List"]</a>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
