--- a/Pages/User/Delete.cshtml
+++ b/Pages/User/Delete.cshtml
@@ -1,15 +1,18 @@
 ﻿@page
 @model MyWebSite.Pages.User.DeleteModel
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>@Localizer["Delete"]</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@Localizer["Are you sure you want to delete this?"]</h3>
 <div>
-    <h4>User</h4>
+    <h4>@Localizer["User"]</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -67,10 +70,10 @@
             @Html.DisplayFor(model => model.Instructors.Comments)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Instructors.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <a asp-page="./Index">@Localizer["Back to List"]</a>
     </form>
 </div>
