--- a/Pages/User/Edit.cshtml
+++ b/Pages/User/Edit.cshtml
@@ -1,13 +1,16 @@
 ﻿@page
 @model MyWebSite.Pages.User.EditModel
 
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>@Localizer["Edit"]</h1>
 
-<h4>User</h4>
+<h4>@Localizer["User"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -94,13 +97,13 @@
                     <input type="submit" value="Save" class="btn btn-primary" />
                 </div>
             </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-page="./Index">Back to List</a>
-</div>
+    <div>
+        <a asp-page="./Index">@Localizer["Back to List"]</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
