--- a/Pages/User/Index.cshtml
+++ b/Pages/User/Index.cshtml
@@ -1,14 +1,16 @@
 ﻿@page "{id:int?}"
-@model MyWebSite.Pages.User.IndexModel
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 
+@model MyWebSite.Pages.User.IndexModel
 @{
     ViewData["Title"] = "User";
 }
 
-<h1>User</h1>
+<h1>@Localizer["User"]</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">@Localizer["Create New"]</a>
 </p>
 <table class="table">
     <thead>
@@ -72,10 +74,10 @@
                     }
                 </td>
                 <td>
-                    <a asp-page="./Index" asp-route-id="@item.ID">Select</a>
-                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                    <a asp-page="./Index" asp-route-id="@item.ID">@Localizer["Select"]</a>
+                    <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Edit"]</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Details"]</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Delete"]</a>
                 </td>
             </tr>
         }
@@ -84,7 +86,7 @@
 
 @if (Model.InstructorData.Ads != null)
 {
-    <h3>Courses Taught by Selected Instructor</h3>
+<h3>@Localizer["Courses Taught by Selected Instructor"]</h3>
     <table class="table">
         <tr>
             <th></th>
@@ -102,7 +104,7 @@
             }
             <tr class="@selectedRow">
                 <td>
-                    <a asp-page="./Index" asp-route-courseID="@item.AdsID">Select</a>
+                    <a asp-page="./Index" asp-route-courseID="@item.AdsID">@Localizer["Select"]</a>
                 </td>
                 <td>
                     @item.AdsID
@@ -121,9 +123,7 @@
 
 @if (Model.InstructorData.Enrollments != null)
 {
-    <h3>
-        Students Enrolled in Selected Course
-    </h3>
+<h3>@Localizer["Students Enrolled in Selected Course"]</h3>
     <table class="table">
         <tr>
             <th>Name</th>
