--- a/Pages/Ads/Create.cshtml
+++ b/Pages/Ads/Create.cshtml
@@ -8,46 +8,54 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>@Localizer["Create"]</h1>
+<div class="container-fluid">
+    <div class="container">
+        <h1>@Localizer["Create"]</h1>
 
-<h4>@Localizer["Ads"]</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Ads.AdsID" class="control-label"></label>
-                <input asp-for="Ads.AdsID" class="form-control" />
-                <span asp-validation-for="Ads.AdsID" class="text-danger"></span>
+        <h4>@Localizer["Ads"]</h4>
+        <hr />
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    <div class="col-md-7">
+                        <form method="post">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Ads.AdsID" class="control-label"></label>
+                                <input asp-for="Ads.AdsID" class="form-control" />
+                                <span asp-validation-for="Ads.AdsID" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Ads.Title" class="control-label"></label>
+                                <input asp-for="Ads.Title" class="form-control" />
+                                <span asp-validation-for="Ads.Title" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Ads.Tags" class="control-label"></label>
+                                <input asp-for="Ads.Tags" class="form-control" />
+                                <span asp-validation-for="Ads.Tags" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Ads.Department" class="control-label"></label>
+                                <select asp-for="Ads.DepartmentID" class="form-control"
+                                        asp-items="@Model.DepartmentNameSL">
+                                    <option value="">-- Select Department --</option>
+                                </select>
+                                <span asp-validation-for="Ads.DepartmentID" class="text-danger" />
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Create" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div>
+                    <a asp-page="Index">@Localizer["Back to List"]</a>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Ads.Title" class="control-label"></label>
-                <input asp-for="Ads.Title" class="form-control" />
-                <span asp-validation-for="Ads.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Ads.Tags" class="control-label"></label>
-                <input asp-for="Ads.Tags" class="form-control" />
-                <span asp-validation-for="Ads.Tags" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Ads.Department" class="control-label"></label>
-                <select asp-for="Ads.DepartmentID" class="form-control"
-                        asp-items="@Model.DepartmentNameSL">
-                    <option value="">-- Select Department --</option>
-                </select>
-                <span asp-validation-for="Ads.DepartmentID" class="text-danger" />
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">@Localizer["Back to List"]</a>
 </div>
 
 @section Scripts {
