--- a/Pages/Ads/Delete.cshtml
+++ b/Pages/Ads/Delete.cshtml
@@ -8,42 +8,50 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>@Localizer["Delete"]</h1>
+<div class="container-fluid">
+    <div class="container">
+        <h1>@Localizer["Delete"]</h1>
 
-<h3>@Localizer["Are you sure you want to delete this?"]</h3>
-<div>
-    <h4>Ads</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ads.AdsID)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ads.AdsID)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ads.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ads.Title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ads.Tags)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ads.Tags)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Ads.Department)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Ads.Department.Name)
-        </dd>
-    </dl>
+        <h3>@Localizer["Are you sure you want to delete this?"]</h3>
+        <hr />
+        <div class="row">
+            <div class="col">
+                <div>
+                    <h4>Ads</h4>
+                    <dl class="row">
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.Ads.AdsID)
+                        </dt>
+                        <dd class="col-sm-12">
+                            @Html.DisplayFor(model => model.Ads.AdsID)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.Ads.Title)
+                        </dt>
+                        <dd class="col-sm-12">
+                            @Html.DisplayFor(model => model.Ads.Title)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.Ads.Tags)
+                        </dt>
+                        <dd class="col-sm-12">
+                            @Html.DisplayFor(model => model.Ads.Tags)
+                        </dd>
+                        <dt class="col-sm-2">
+                            @Html.DisplayNameFor(model => model.Ads.Department)
+                        </dt>
+                        <dd class="col-sm-12">
+                            @Html.DisplayFor(model => model.Ads.Department.Name)
+                        </dd>
+                    </dl>
 
-    <form method="post">
-        <input type="hidden" asp-for="Ads.AdsID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">@Localizer["Back to List"]</a>
-    </form>
+                    <form method="post">
+                        <input type="hidden" asp-for="Ads.AdsID" />
+                        <input type="submit" value="Delete" class="btn btn-danger" /> |
+                        <a asp-page="./Index">@Localizer["Back to List"]</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
