--- a/Pages/Company/Create.cshtml
+++ b/Pages/Company/Create.cshtml
@@ -8,87 +8,98 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h1>@Localizer["Create"]</h1>
+<div class="container-fluid">
+    <div class="container">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>@Localizer["Create"]</h1>
 
-<h4>@Localizer["Company"]</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Company.Title" class="control-label"></label>
-                <input asp-for="Company.Title" class="form-control" />
-                <span asp-validation-for="Company.Title" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Rating" class="control-label"></label>
-                <input asp-for="Company.Rating" class="form-control" />
-                <span asp-validation-for="Company.Rating" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.EnrollmentDate" class="control-label"></label>
-                <input asp-for="Company.EnrollmentDate" class="form-control" />
-                <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Bonus" class="control-label"></label>
-                <input asp-for="Company.Bonus" class="form-control" />
-                <span asp-validation-for="Company.Bonus" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Description" class="control-label"></label>
-                <input asp-for="Company.Description" class="form-control" />
-                <span asp-validation-for="Company.Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Images" class="control-label"></label>
-                <input asp-for="Company.Images" class="form-control" />
-                <span asp-validation-for="Company.Images" class="text-danger"></span>
-                @*<div id="drop-area">
-                        <div class="my-form">
-                            <p>Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область</p>
-                    <progress id="progress-bar" max=100 value=0></progress>
-                            <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
-                            <label class="button" for="fileElem">Выбрать изображения</label>
+                    <h4>@Localizer["Company"]</h4>
+                    <hr />
+                    <div class="row">
+                        <div class="col-md-4">
+                            <form method="post">
+                                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Title" class="control-label"></label>
+                                    <input asp-for="Company.Title" class="form-control" />
+                                    <span asp-validation-for="Company.Title" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Rating" class="control-label"></label>
+                                    <input asp-for="Company.Rating" class="form-control" />
+                                    <span asp-validation-for="Company.Rating" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.EnrollmentDate" class="control-label"></label>
+                                    <input asp-for="Company.EnrollmentDate" class="form-control" />
+                                    <span asp-validation-for="Company.EnrollmentDate" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Bonus" class="control-label"></label>
+                                    <input asp-for="Company.Bonus" class="form-control" />
+                                    <span asp-validation-for="Company.Bonus" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Description" class="control-label"></label>
+                                    <input asp-for="Company.Description" class="form-control" />
+                                    <span asp-validation-for="Company.Description" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Images" class="control-label"></label>
+                                    <input asp-for="Company.Images" class="form-control" />
+                                    <span asp-validation-for="Company.Images" class="text-danger"></span>
+                                    @*<div id="drop-area">
+                                            <div class="my-form">
+                                                <p>Загрузите изображения с помощью диалога выбора файлов или перетащив нужные изображения в выделенную область</p>
+                                        <progress id="progress-bar" max=100 value=0></progress>
+                                                <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
+                                                <label class="button" for="fileElem">Выбрать изображения</label>
+                                            </div>
+                                            <div id="gallery"></div>
+                                        </div>*@
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Video" class="control-label"></label>
+                                    <input asp-for="Company.Video" class="form-control" />
+                                    <span asp-validation-for="Company.Video" class="text-danger"></span>
+                                    <a asp-page="UploadVideo.cs">Загрузить видео</a>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Topic" class="control-label"></label>
+                                    <input asp-for="Company.Topic" class="form-control" />
+                                    <span asp-validation-for="Company.Topic" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.News" class="control-label"></label>
+                                    <input asp-for="Company.News" class="form-control" />
+                                    <span asp-validation-for="Company.News" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Price" class="control-label"></label>
+                                    <input asp-for="Company.Price" class="form-control" />
+                                    <span asp-validation-for="Company.Price" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <label asp-for="Company.Tags" class="control-label"></label>
+                                    <input asp-for="Company.Tags" class="form-control" />
+                                    <span asp-validation-for="Company.Tags" class="text-danger"></span>
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" value="Create" class="btn btn-primary" />
+                                </div>
+                            </form>
                         </div>
-                        <div id="gallery"></div>
-                    </div>*@
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Video" class="control-label"></label>
-                <input asp-for="Company.Video" class="form-control" />
-                <span asp-validation-for="Company.Video" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Topic" class="control-label"></label>
-                <input asp-for="Company.Topic" class="form-control" />
-                <span asp-validation-for="Company.Topic" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.News" class="control-label"></label>
-                <input asp-for="Company.News" class="form-control" />
-                <span asp-validation-for="Company.News" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Price" class="control-label"></label>
-                <input asp-for="Company.Price" class="form-control" />
-                <span asp-validation-for="Company.Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Company.Tags" class="control-label"></label>
-                <input asp-for="Company.Tags" class="form-control" />
-                <span asp-validation-for="Company.Tags" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+                    </div>
 
-<div>
-    <a asp-page="Index">@Localizer["Back to List"]</a>
+                    <div>
+                        <a asp-page="Index">@Localizer["Back to List"]</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
