--- a/Pages/Company/Index.cshtml
+++ b/Pages/Company/Index.cshtml
@@ -8,147 +8,157 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
-<h1>@Localizer["Company"]</h1>
+<div class="container-fluid">
+    <div class="container">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h1>@Localizer["Company"]</h1>
 
-<p>
-    <a asp-page="Create">@Localizer["Create New"]</a>
-</p>
+                    <p>
+                        <a asp-page="Create">@Localizer["Create New"]</a>
+                    </p>
 
-<form asp-page="./Index" method="get">
-    <div class="form-actions no-color">
-        <p>
-            Find by name:
-            <input type="text" name="SearchString" value="@Model.CurrentFilter" />
-            <input type="submit" value="Search" class="btn btn-primary" /> |
-            <a asp-page="./Index">@Localizer["Back to full List"]</a>
-        </p>
+                    <form asp-page="./Index" method="get">
+                        <div class="form-actions no-color">
+                            <p>
+                                Find by name:
+                                <input type="text" name="SearchString" value="@Model.CurrentFilter" />
+                                <input type="submit" value="Search" class="btn btn-primary" /> |
+                                <a asp-page="./Index">@Localizer["Back to full List"]</a>
+                            </p>
+                        </div>
+                    </form>
+
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Title)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Rating)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.DateSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].EnrollmentDate)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Bonus)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Bonus)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Description)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Images)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Video)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Topic)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].News)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Price)
+                                    </a>
+                                </th>
+                                <th>
+                                    <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
+                                       asp-route-currentFilter="@Model.CurrentFilter">
+                                        @Html.DisplayNameFor(model => model.Company[0].Tags)
+                                    </a>
+                                </th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.Company)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Title)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Rating)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.EnrollmentDate)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Bonus)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Description)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Images)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Video)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Topic)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.News)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Price)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Tags)
+                                    </td>
+                                    <td>
+                                        <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Edit"]</a> |
+                                        <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Details"]</a> |
+                                        <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Delete"]</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-</form>
-
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Title)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Rating)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.DateSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].EnrollmentDate)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Bonus)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Bonus)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Description)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Images)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Video)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Topic)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].News)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Price)
-                </a>
-            </th>
-            <th>
-                <a asp-page="./Index" asp-route-sortOrder="@Model.NameSort"
-                   asp-route-currentFilter="@Model.CurrentFilter">
-                    @Html.DisplayNameFor(model => model.Company[0].Tags)
-                </a>
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Company)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Rating)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EnrollmentDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Bonus)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Images)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Video)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Topic)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.News)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Tags)
-                </td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.ID">@Localizer["Edit"]</a> |
-                    <a asp-page="./Details" asp-route-id="@item.ID">@Localizer["Details"]</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.ID">@Localizer["Delete"]</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+</div>
 
 @{
     var prevDisabled = !Model.Company.HasPreviousPage ? "disabled" : "";
