--- a/Pages/Departments/Create.cshtml
+++ b/Pages/Departments/Create.cshtml
@@ -8,48 +8,56 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>@Localizer["Create"]</h1>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>@Localizer["Create"]</h1>
 
-<h4>@Localizer["Department"]</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Department.Name" class="control-label"></label>
-                <input asp-for="Department.Name" class="form-control" />
-                <span asp-validation-for="Department.Name" class="text-danger"></span>
+                <h4>@Localizer["Department"]</h4>
+                <hr />
+                <div class="row">
+                    <div class="col-md-4">
+                        <form method="post">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Department.Name" class="control-label"></label>
+                                <input asp-for="Department.Name" class="form-control" />
+                                <span asp-validation-for="Department.Name" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Department.Budget" class="control-label"></label>
+                                <input asp-for="Department.Budget" class="form-control" />
+                                <span asp-validation-for="Department.Budget" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Department.StartDate" class="control-label"></label>
+                                <input asp-for="Department.StartDate" class="form-control" />
+                                <span asp-validation-for="Department.StartDate" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Department.RowVersion" class="control-label"></label>
+                                <input asp-for="Department.RowVersion" class="form-control" />
+                                <span asp-validation-for="Department.RowVersion" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Department.Administrator" class="control-label"></label>
+                                <input asp-for="Department.Administrator" class="form-control" />
+                                <span asp-validation-for="Department.Administrator" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Create" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div>
+                    <a asp-page="Index">@Localizer["Back to List"]</a>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Department.Budget" class="control-label"></label>
-                <input asp-for="Department.Budget" class="form-control" />
-                <span asp-validation-for="Department.Budget" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Department.StartDate" class="control-label"></label>
-                <input asp-for="Department.StartDate" class="form-control" />
-                <span asp-validation-for="Department.StartDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Department.RowVersion" class="control-label"></label>
-                <input asp-for="Department.RowVersion" class="form-control" />
-                <span asp-validation-for="Department.RowVersion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Department.Administrator" class="control-label"></label>
-                <input asp-for="Department.Administrator" class="form-control" />
-                <span asp-validation-for="Department.Administrator" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-page="Index">@Localizer["Back to List"]</a>
 </div>
 
 @section Scripts {
