--- a/Pages/Departments/Edit.cshtml
+++ b/Pages/Departments/Edit.cshtml
@@ -8,52 +8,61 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>@Localizer["Edit"]</h1>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>@Localizer["Edit"]</h1>
 
-<h4>@Localizer["Department"]</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Department.DepartmentID" />
-            <input type="hidden" asp-for="Department.RowVersion" />
-            <div class="form-group">
-                <label>RowVersion</label>
-                @Model.Department.RowVersion[7]
+                <h4>@Localizer["Department"]</h4>
+                <hr />
+                <div class="row">
+                    <div class="col-md-4">
+                        <form method="post">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <input type="hidden" asp-for="Department.DepartmentID" />
+                            <input type="hidden" asp-for="Department.RowVersion" />
+                            <div class="form-group">
+                                <label>RowVersion</label>
+                                @Model.Department.RowVersion[7]
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Department.Name" class="control-label"></label>
+                                <input asp-for="Department.Name" class="form-control" />
+                                <span asp-validation-for="Department.Name" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Department.Budget" class="control-label"></label>
+                                <input asp-for="Department.Budget" class="form-control" />
+                                <span asp-validation-for="Department.Budget" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Department.StartDate" class="control-label"></label>
+                                <input asp-for="Department.StartDate" class="form-control" />
+                                <span asp-validation-for="Department.StartDate" class="text-danger">
+                                </span>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">Instructor</label>
+                                <select asp-for="Department.UsersID" class="form-control"
+                                        asp-items="@Model.InstructorNameSL"></select>
+                                <span asp-validation-for="Department.UsersID" class="text-danger">
+                                </span>
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Save" class="btn btn-primary" />
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div>
+                    <a asp-page="./Index">@Localizer["Back to List"]</a>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Department.Name" class="control-label"></label>
-                <input asp-for="Department.Name" class="form-control" />
-                <span asp-validation-for="Department.Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Department.Budget" class="control-label"></label>
-                <input asp-for="Department.Budget" class="form-control" />
-                <span asp-validation-for="Department.Budget" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Department.StartDate" class="control-label"></label>
-                <input asp-for="Department.StartDate" class="form-control" />
-                <span asp-validation-for="Department.StartDate" class="text-danger">
-                </span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Instructor</label>
-                <select asp-for="Department.UsersID" class="form-control"
-                        asp-items="@Model.InstructorNameSL"></select>
-                <span asp-validation-for="Department.UsersID" class="text-danger">
-                </span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
-<div>
-    <a asp-page="./Index">@Localizer["Back to List"]</a>
-</div>
+
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
