--- a/Pages/Departments/Index.cshtml
+++ b/Pages/Departments/Index.cshtml
@@ -8,57 +8,65 @@
     ViewData["Title"] = "Departments";
 }
 
-<h1>@Localizer["Departments"]</h1>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>@Localizer["Departments"]</h1>
 
-<p>
-    <a asp-page="Create">@Localizer["Create New"]</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Department[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department[0].Budget)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department[0].StartDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department[0].Administrator)
-            </th>
-            <th>
-                RowVersion
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Department)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Budget)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.StartDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Administrator.FullName)
-                </td>
-                <td>
-                    @item.RowVersion[7]
-                </td>
-                <td>
-                    <a asp-page="./Edit" asp-route-id="@item.DepartmentID">@Localizer["Edit"]</a> |
-                    <a asp-page="./Details" asp-route-id="@item.DepartmentID">@Localizer["Details"]</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.DepartmentID">@Localizer["Delete"]</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                <p>
+                    <a asp-page="Create">@Localizer["Create New"]</a>
+                </p>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Department[0].Name)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Department[0].Budget)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Department[0].StartDate)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Department[0].Administrator)
+                            </th>
+                            <th>
+                                RowVersion
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.Department)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Budget)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.StartDate)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Administrator.FullName)
+                                </td>
+                                <td>
+                                    @item.RowVersion[7]
+                                </td>
+                                <td>
+                                    <a asp-page="./Edit" asp-route-id="@item.DepartmentID">@Localizer["Edit"]</a> |
+                                    <a asp-page="./Details" asp-route-id="@item.DepartmentID">@Localizer["Details"]</a> |
+                                    <a asp-page="./Delete" asp-route-id="@item.DepartmentID">@Localizer["Delete"]</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
