--- a/Pages/User/Create.cshtml
+++ b/Pages/User/Create.cshtml
@@ -8,70 +8,78 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>@Localizer["Create"]</h2>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h2>@Localizer["Create"]</h2>
 
-<h4>@Localizer["User"]</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Instructor.LastName" class="control-label"></label>
-                <input asp-for="Instructor.LastName" class="form-control" />
-                <span asp-validation-for="Instructor.LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Instructor.FirstMidName" class="control-label"></label>
-                <input asp-for="Instructor.FirstMidName" class="form-control" />
-                <span asp-validation-for="Instructor.FirstMidName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Instructor.HireDate" class="control-label"></label>
-                <input asp-for="Instructor.HireDate" class="form-control" />
-                <span asp-validation-for="Instructor.HireDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Instructor.OfficeAssignment.Location" class="control-label"></label>
-                <input asp-for="Instructor.OfficeAssignment.Location" class="form-control" />
-                <span asp-validation-for="Instructor.OfficeAssignment.Location" class="text-danger" />
-            </div>
-            <div class="form-group">
-                <div class="table">
-                    <table>
-                        <tr>
-                            @{
-                                int cnt = 0;
+                <h4>@Localizer["User"]</h4>
+                <hr />
+                <div class="row">
+                    <div class="col-md-4">
+                        <form method="post">
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.LastName" class="control-label"></label>
+                                <input asp-for="Instructor.LastName" class="form-control" />
+                                <span asp-validation-for="Instructor.LastName" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.FirstMidName" class="control-label"></label>
+                                <input asp-for="Instructor.FirstMidName" class="form-control" />
+                                <span asp-validation-for="Instructor.FirstMidName" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.HireDate" class="control-label"></label>
+                                <input asp-for="Instructor.HireDate" class="form-control" />
+                                <span asp-validation-for="Instructor.HireDate" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="Instructor.OfficeAssignment.Location" class="control-label"></label>
+                                <input asp-for="Instructor.OfficeAssignment.Location" class="form-control" />
+                                <span asp-validation-for="Instructor.OfficeAssignment.Location" class="text-danger" />
+                            </div>
+                            <div class="form-group">
+                                <div class="table">
+                                    <table>
+                                        <tr>
+                                            @{
+                                                int cnt = 0;
 
-                                foreach (var ads in Model.AssignedCourseDataList)
-                                {
-                                    if (cnt++ % 3 == 0)
-                                    {
-                                    @:</tr><tr>
-                                    }
-                                    @:<td>
-                                        <input type="checkbox"
-                                               name="selectedCourses"
-                                               value="@ads.AdsID"
-                                               @(Html.Raw(ads.Assigned ? "checked=\"checked\"" : "")) />
-                                        @ads.AdsID @:  @ads.Title
-                                    @:</td>
-                                }
-                            @:</tr>
-                            }
-                        </table>
+                                                foreach (var ads in Model.AssignedCourseDataList)
+                                                {
+                                                    if (cnt++ % 3 == 0)
+                                                    {
+                                                    @:</tr><tr>
+                                                    }
+                                                    @:<td>
+                                                        <input type="checkbox"
+                                                               name="selectedCourses"
+                                                               value="@ads.AdsID"
+                                                               @(Html.Raw(ads.Assigned ? "checked=\"checked\"" : "")) />
+                                                        @ads.AdsID @:  @ads.Title
+                                                    @:</td>
+                                                }
+                                            @:</tr>
+                                            }
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" value="Create" class="btn btn-primary" />
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div>
+                        <a asp-page="Index">@Localizer["Back to List"]</a>
                     </div>
                 </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
         </div>
     </div>
-
-    <div>
-        <a asp-page="Index">@Localizer["Back to List"]</a>
-    </div>
+</div>
 
     @section Scripts {
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
