--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,23 +24,23 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/About">@Localizer["About"]</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/About">@Localizer["Информация"]</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Company"]</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Company/Index">@Localizer["Компании"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Ads/Index">@Localizer["Ads"]</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Ads/Index">@Localizer["Объявления"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">@Localizer["Instructors"]</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Index">@Localizer["Администраторы"]</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">@Localizer["Departments"]</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Departments/Index">@Localizer["Отделы"]</a>
                         </li>
                         <li>
-                            <div class="theme-button" id="theme-button">@Localizer["Change theme"]</div>
+                            <div class="theme-button" id="theme-button">@Localizer["Сменить тему"]</div>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -56,7 +56,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">@Localizer["Privacy"]</a>
+            &copy; 2021 - MyWebSite - <a asp-area="" asp-page="/Privacy">@Localizer["Конфиденциальность"]</a>
         </div>
     </footer>
 
