--- a/wwwroot/css/DragAndDrop.css
+++ b/wwwroot/css/DragAndDrop.css
@@ -1,6 +1,6 @@
 ﻿#drop-area {
     border: 2px dashed #ccc;
-    border-radius: 20px;
+/*    border-radius: 20px;*/
     width: 480px;
     font-family: sans-serif;
     margin: 100px auto;
