--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h4>@Localizer["Use a local account to log in."]</h4>
+                <h4>@Localizer["Используйте локальную учетную запись для входа в систему"]</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -35,17 +35,17 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">@Localizer["Log in"]</button>
+                    <button type="submit" class="btn btn-primary">@Localizer["Авторизоваться"]</button>
                 </div>
                 <div class="form-group">
                     <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">@Localizer["Forgot your password?"]</a>
+                        <a id="forgot-password" asp-page="./ForgotPassword">@Localizer["Забыли свой пароль?"]</a>
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["Register as a new user"]</a>
+                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">@Localizer["Зарегистрируйтесь как новый пользователь"]</a>
                     </p>
                     <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">@Localizer["Resend email confirmation"]</a>
+                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">@Localizer["Повторная отправка подтверждения по электронной почте"]</a>
                     </p>
                 </div>
             </form>
@@ -53,7 +53,7 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>Use another service to log in.</h4>
+            <h4>@Localizer["Используйте другую службу для входа в систему"]</h4>
             <hr />
             @{
                 if ((Model.ExternalLogins?.Count ?? 0) == 0)
