--- a/Pages/Company/Details.cshtml
+++ b/Pages/Company/Details.cshtml
@@ -8,6 +8,8 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 
+<link rel="stylesheet" href="/css/rating.css">
+
 <div class="container-fluid">
     <div class="container">
         <div class="container">
@@ -17,6 +19,18 @@
 
                     <div>
                         <h4>@Localizer["Company"]</h4>
+                        <form class="rating-area">
+                            <input type="radio" id="star-5" name="rating" value="5">
+                            <label for="star-5" title="Оценка «5»"></label>
+                            <input type="radio" id="star-4" name="rating" value="4">
+                            <label for="star-4" title="Оценка «4»"></label>
+                            <input type="radio" id="star-3" name="rating" value="3">
+                            <label for="star-3" title="Оценка «3»"></label>
+                            <input type="radio" id="star-2" name="rating" value="2">
+                            <label for="star-2" title="Оценка «2»"></label>
+                            <input type="radio" id="star-1" name="rating" value="1">
+                            <label for="star-1" title="Оценка «1»"></label>
+                        </form>
                         <hr />
                         <dl class="row">
                             <dt class="col-sm-2">
@@ -31,18 +45,6 @@
                             <dd class="col-sm-10">
                                 @Html.DisplayFor(model => model.Company.Rating)
                             </dd>
-                            @*<dd class="rating-area">
-                                    <input type="radio" id="star-5" name="rating" value="5">
-                                    <label for="star-5" title="Оценка «5»"></label>
-                                    <input type="radio" id="star-4" name="rating" value="4">
-                                    <label for="star-4" title="Оценка «4»"></label>
-                                    <input type="radio" id="star-3" name="rating" value="3">
-                                    <label for="star-3" title="Оценка «3»"></label>
-                                    <input type="radio" id="star-2" name="rating" value="2">
-                                    <label for="star-2" title="Оценка «2»"></label>
-                                    <input type="radio" id="star-1" name="rating" value="1">
-                                    <label for="star-1" title="Оценка «1»"></label>
-                                </dd>*@
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(model => model.Company.EnrollmentDate)
                             </dt>
@@ -125,37 +127,17 @@
                         <a asp-page="./Edit" asp-route-id="@Model.Company.ID">@Localizer["Edit"]</a> |
                         <a asp-page="./Index">@Localizer["Back to List"]</a>
                     </div>
+                    <div class="form-group">
+                        <form>
+                            <span>Имя: </span><br>
+                            <input type="text" id="name"><br>
+                            <span>Комментарий</span><br>
+                            <textarea id="comment" class="w-auto p-3" ></textarea><br>
+                            <button id="button">Отправить</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-@*<div class="form-group">
-        <form action="" method="post">
-            <span asp-for="Instructor.FirstMidName">Имя: </span><br>
-            <input asp-for="Instructor.FirstMidName" type="text" id="name"><br>
-            <span asp-for="Instructor.Comments">Комментарий</span><br>
-            <textarea id="comment" cols="30" rows="10"></textarea><br>
-            <button id="button">Отправить</button>
-        </form>
-    </div>
-    <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
-    </div>*@
-
-@*<script>
-      var button = document.getElementById('button'),
-          xmlhttp = new XMLHttpRequest();
-      button.addEventListener('click', function() {
-       var name = document.getElementById('name').value.replace(/<[^>]+>/g,''),
-           comment = document.getElementById('comment').value.replace(/<[^>]+>/g,'');
-       if(name === '' || comment === '') {
-        alert('Заполните все поля!');
-        return false;
-       }
-       xmlhttp.open('post', 'libs/add_comment.php', true);
-       xmlhttp.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
-       xmlhttp.send("name=" + encodeURIComponent(name) + "&comment=" + encodeURIComponent(comment));
-      });
-    </script>*@
