--- a/Pages/Company/Edit.cshtml
+++ b/Pages/Company/Edit.cshtml
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Company.Description" class="control-label"></label>
-                                    <input asp-for="Company.Description" class="form-control" />
+                                    <textarea asp-for="Company.Description" class="form-control"></textarea>
                                     <span asp-validation-for="Company.Description" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label asp-for="Company.News" class="control-label"></label>
-                                    <input asp-for="Company.News" class="form-control" />
+                                    <textarea asp-for="Company.News" class="form-control"></textarea>
                                     <span asp-validation-for="Company.News" class="text-danger"></span>
                                 </div>
                                 <div class="form-group">
